it will add the second background and style it and it will also make the header static

--- a/html/index.html
+++ b/html/index.html
@@ -40,5 +40,25 @@
             <p>Future Ready</p>
         </div>
     </div>
+
+    <div class="bg2">
+
+        <div class="text">
+            <h1>Why Mountain-Top</h1>
+            <h5>Thriving today and leading tomorrow.</h5>
+            <p>Mountain-Top's mission is to prepare young kids to make a <br>
+            difference and to take on an ever-changing world with <br>
+            confidence, resilience and global-mindedness. Our supportive, <br>
+            stimulating environment gives them the future-ready skills they <br>
+            need to lead with purpose and thrive no matter what tomorrow <br>
+            brings.</p>
+
+            <button class="button1">Learn More</button>
+        </div>
+
+        <div class="image1">
+            <img src="01.png" alt="#">
+        </div>
+    </div>
 </body>
 </html>
