--- a/html/index.html
+++ b/html/index.html
@@ -25,7 +25,9 @@
             </ul>
         </div>
         <div class="logo">
-            <img src="Asset 2.png" alt="#">
+            <a href="index.html">
+                <img src="Asset 2.png" alt="#">
+            </a>
         </div>
         <div class="search">
             <span class="material-symbols-outlined">
@@ -57,8 +59,26 @@
         </div>
 
         <div class="image1">
-            <img src="01.png" alt="#">
+            <img src="images/01.png" alt="#">
         </div>
+    </div>
+
+    <div class="bg3">
+        <div class="image2-3">
+            <img src="images/2.jpg" alt="#">
+            <img src="images/3.jpg" alt="#">
+            <div class="text2">
+                <h1>Junior School</h1>
+                <p>(Junior Kindergaarten-Grade 6)</p>
+                <button class="button2">Learn More</button>
+            </div>
+        </div>
+        <div class="image4-5">
+            <img src="images/4.jpg" alt="#">
+            <img src="images/5.jpg" alt="#">
+            <p>Learning</p>
+        </div>
+
     </div>
 </body>
 </html>
