add 6th background and style it

--- a/html/index.html
+++ b/html/index.html
@@ -9,30 +9,30 @@
 </head>
 <body>
     <div class="header">
-        <div class="openmenu">
-            <span class="material-symbols-outlined">
-                menu
-            </span>
-            <a href="#" class="menubutton">MENU</a>
-            
+
+        <div class="dropdown">
+            <button class="dropbtn">MENU</button>
+            <div class="dropdown-content">
+                <a href="index.html">HOME</a>
+                <a href="index2.html">ADMISSION</a>
+                <a href="#">ENROLL</a>
+                <a href="#">ABOUT US</a>
+                <a href="#">CONTACT</a>
+            </div>
         </div>
-        <div class="list">
-            <ul>
-                <li>About</li>
-                <li>Learning</li>
-                <li>Admission</li>
-                <li>Giving</li>
-            </ul>
-        </div>
+
         <div class="logo">
             <a href="index.html">
                 <img src="Asset 2.png" alt="#">
             </a>
         </div>
-        <div class="search">
-            <span class="material-symbols-outlined">
-                search
-            </span>
+
+        <div class="wow">
+            <div class="search">
+                <span class="material-symbols-outlined">
+                    search
+                </span>
+            </div>
         </div>
     </div>
 
@@ -65,13 +65,13 @@
 
     <div class="bg3">
         <div class="image2-3">
-            <img src="images/2.jpg" alt="#">
-            <img src="images/3.jpg" alt="#">
             <div class="text2">
                 <h1>Junior School</h1>
-                <p>(Junior Kindergaarten-Grade 6)</p>
+                <p>(Junior Kindergarten-Grade 6)</p>
                 <button class="button2">Learn More</button>
             </div>
+            <img src="images/2.jpg" alt="#">
+            <img src="images/3.jpg" alt="#">
         </div>
         <div class="image4-5">
             <img src="images/4.jpg" alt="#">
@@ -79,6 +79,71 @@
             <p>Learning</p>
         </div>
 
+    </div>
+
+    <div class="bg4">
+        <div class="image6-7">
+            <img src="images/6.jpg" alt="#">
+            <img src="images/7.jpg" alt="#">
+            <div class="text3">
+                <h1>Middle School</h1>
+                <p>(Grades 7-8)</p>
+                <button class="button3">Learn More</button>
+            </div>
+        </div>
+        <div class="image8-9">
+            <p>Friends</p>
+            <img src="images/8.jpg" alt="#">
+            <img src="images/9.jpg" alt="#">
+        </div>
+
+    </div>
+
+    <div class="bg5">
+        <div class="image10-11">
+            <div class="text4">
+                <h1>Senior School</h1>
+                <p>(Grades 9-12)</p>
+                <button class="button4">Learn More</button>
+            </div>
+            <img src="images/10.jpg" alt="#">
+            <img src="images/11.jpg" alt="#">
+        </div>
+        <div class="image12-13">
+            <img src="images/12.jpg" alt="#">
+            <img src="images/13.jpg" alt="#">
+            <p>Experience</p>
+        </div>
+
+    </div>
+
+    <div class="bg6">
+        <h1>Featured Alumni</h1>
+        <p>At MountainTop Academy, we foster a passion for lifelong learning which means our <br>
+        education truly never ends. Since the school was founded in 2012, more than <br>
+        1,000+ alumni have gone on to lead and serve with purpose across Nigeria <br>
+        and the world.</p>
+    </div>
+
+    <div class="bg7">
+        <div class="p1">
+            <h1>CONTACT</h1>
+            <h6>info@mountaintop.on.ca</h6>
+            <p>2, Showunmi Street Egan, Lagos</p>
+            <p>+234-907-704-0032</p>
+            <h5>@ 2024 MountainTop Academy</h5>
+        </div>
+
+        <div class="p2">
+            <h1>HELPFUL LINKS</h1>
+            <ul>
+                <li>DONATE</li>
+                <li>APPLY</li>
+                <li>CONTACT US</li>
+                <li>ABOUT US</li>
+            </ul>
+        
+        </div>
     </div>
 </body>
 </html>
