it will add the second index admission and style it

--- a/html/index.html
+++ b/html/index.html
@@ -16,14 +16,14 @@
                 <a href="index.html">HOME</a>
                 <a href="index2.html">ADMISSION</a>
                 <a href="#">ENROLL</a>
-                <a href="#">ABOUT US</a>
+                <a href="index3.html">ABOUT US</a>
                 <a href="#">CONTACT</a>
             </div>
         </div>
 
         <div class="logo">
             <a href="index.html">
-                <img src="Asset 2.png" alt="#">
+                <img src="images/Asset 2.png" alt="#">
             </a>
         </div>
 
