--- a/html/index2.html
+++ b/html/index2.html
@@ -16,14 +16,14 @@
                 <a href="index.html">HOME</a>
                 <a href="index2.html">ADMISSION</a>
                 <a href="#">ENROLL</a>
-                <a href="#">ABOUT US</a>
+                <a href="index3.html">ABOUT US</a>
                 <a href="#">CONTACT</a>
             </div>
         </div>
 
         <div class="logo">
             <a href="index.html">
-                <img src="Asset 2.png" alt="#">
+                <img src="/images/Asset 2.png" alt="#">
             </a>
         </div>
 
@@ -36,7 +36,35 @@
         </div>
     </div>
 
-    <!-- <div class="bg7">
+    <div class="bg8">
+        <div class="content2">
+            <h1>ADMISSION</h1>
+            <h2>CENTER.</h2>
+        </div>
+    </div>
+
+    <div class="bg9">
+        <p>Welcome to MountainTop's Admission Centre! We hope you find this reasource helpful. 
+        Our Admission team is also here to help you answer your questions and discover all that 
+        MountainTop has to offer you.</p>
+        <p>As you learn more about our community by viewing our social media posts, visiting our 
+        2 acre campus for a tour or attending a MountainTop event, you will find MountainTop's values 
+        (integrity, inquiry, compassion and courage) are at the heart of our vibrant, diverse community 
+        of learners and educators. Whether it is on the field participating in one of our athletic 
+        teams, on stage performing in a drama or music production, discovering new skills as a member 
+        of a club, or participating on a Global Education trip abroad or in a classroom, MountainTop 
+        students are surrounded by a community who champions them, supports them and encourages them 
+        to be thier best selves. it is a community who embraces not just students, but our parents and 
+        our global partners who we are connected with through our Global Education program and partnership </p>
+        <p>Throughout the admission process, our Admission team is here to support you and answer your questions 
+        as we work to learn more about you, what makes you unique and how MountainTop can support you to one
+        day become a graduate ready to make a difference.</p>
+        <p>Akitobi Oluwafemi <br>
+        Executive Director</p>
+        <a href="mailto:akitobioluwafemi@gmail.com"><p>Email the Admission team</p></a>
+    </div>
+
+    <div class="bg7">
         <div class="p1">
             <h1>CONTACT</h1>
             <h6>info@mountaintop.on.ca</h6>
@@ -55,6 +83,6 @@
             </ul>
         
         </div>
-    </div> -->
+    </div>
 </body>
 </html>
