it will add a new index called about us

--- a/html/index3.html
+++ b/html/index3.html
@@ -36,6 +36,34 @@
         </div>
     </div>
 
+    <div class="bg10">
+        <div class="content3">
+            <h1>MountainTop Difference</h1>
+        </div>
+    </div>
+
+    <div class="bg11">
+        <h1>Who We Are</h1>
+        
+        <div class="content4">
+            <img src="images/18.jpg" alt="#">
+
+            <div class="innercontent4">
+                <h6>MountainTop Academy is one of Nigeria's preeminent
+                    independent schools for kids from Junior Kindergarten to Grade 12.
+                </h6>
+                <p>At MountainTop Academy, each student is supported to make empowering choices 
+                    and become the architect of thier education.
+                    A school (Junior Kindergarten to Grade 12) in Lagos, Nigeria, MountainTop offers
+                    a rigorious curriculum designed around the pillars of academics and wellbeing.
+                    Our students learn new ways to express themselves with creativity, enthusiam and
+                    self-confidence. MountainTopalumni graduate with inquiry mindsets, ready to solve problems and
+                    meet the demands of a rapidly-changing world.
+                </p>
+            </div>
+        </div>
+    </div>
+
     <!-- <div class="bg7">
         <div class="p1">
             <h1>CONTACT</h1>
