it will add the new background and style it

--- a/html/index3.html
+++ b/html/index3.html
@@ -64,7 +64,31 @@
         </div>
     </div>
 
-    <!-- <div class="bg7">
+    <div class="bg12">
+        <div class="content5">
+
+            <div class="innercontent5">
+                <h1>Our Mission, Values and Vision
+                </h1>
+                <p>Founded in 2012 and rooted in Christianity tradition,
+                    MountainTop's mission is to prepare children to make a difference.
+                    The hallmarks of a MountainTop education are enriched, broad-based educational
+                    programs and rigorous academic standards, a stimulating and supportive learning
+                    environment and a strong community that fosters the qualities of leadership
+                    and good citizenship, underpinned by the school's values of Integrity, Inquiry, Compassion
+                    and Courage. These pillars of excellence prepare our gradutes as leaders of the 
+                    future and have positioned MountainTop at the forefront of children education for more than
+                    a decade.
+                </p>
+                <p>Learn more about our commitment to Equity, Diversity and Inclusion.</p>
+            </div>
+
+            <img src="images/19.jpg" alt="#">
+        </div>
+        <div class="lasttext">Make Change</div>
+    </div>
+
+    <div class="bg7">
         <div class="p1">
             <h1>CONTACT</h1>
             <h6>info@mountaintop.on.ca</h6>
@@ -83,6 +107,6 @@
             </ul>
         
         </div>
-    </div> -->
+    </div>
 </body>
 </html>
